--- a/app/src/main/res/layout/archived_page_row.xml
+++ b/app/src/main/res/layout/archived_page_row.xml
@@ -3,7 +3,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="20dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
                 android:background="@android:color/white"
     >
 
@@ -11,15 +14,13 @@
         android:id="@+id/frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         >
         <ImageView
             android:id="@+id/screenshot"
             android:scaleType="centerCrop"
             android:layout_width="64dp"
-            android:layout_height="96dp"
-            android:paddingTop="12dp"
-            android:paddingLeft="12dp"
+            android:layout_height="64dp"
             />
 
         <ImageView
@@ -32,23 +33,26 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/frame"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/frame"
         android:layout_alignParentTop="@id/frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:textColor="#dd000000"
+        android:textStyle="bold"
+        android:paddingLeft="5dp"
         />
 
 
     <TextView
         android:id="@+id/url"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/frame"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/frame"
         android:layout_below="@id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
         android:textStyle="italic"
         android:textSize="12sp"
         android:textColor="#88000000"
