--- a/app/src/main/res/layout/archived_page_row.xml
+++ b/app/src/main/res/layout/archived_page_row.xml
@@ -31,11 +31,21 @@
             />
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/more"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_action_more"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        />
+
     <TextView
         android:id="@+id/title"
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/frame"
-        android:layout_alignParentTop="@id/frame"
+        android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
@@ -44,18 +54,20 @@
         android:paddingLeft="5dp"
         />
 
-
     <TextView
         android:id="@+id/url"
-        android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/frame"
+        android:layout_toLeftOf="@id/more"
         android:layout_below="@id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:textStyle="italic"
         android:textSize="12sp"
         android:textColor="#88000000"
+        android:maxLines="1"
+        android:ellipsize="end"
         />
 
 
