website changes, hooked up notification content intent

--- a/knapsack-backend/knapsackbackend/assets/css/knapsack.css
+++ b/knapsack-backend/knapsackbackend/assets/css/knapsack.css
@@ -28,3 +28,14 @@ h1 {
     paddin-bottom: 40px;
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    left:50%;
+    width: 600px;
+    margin-left: -300px;
+}
+
+.play-store {
+    padding-top: 45px;
+}
