--- a/app/src/main/res/layout/archived_page_row.xml
+++ b/app/src/main/res/layout/archived_page_row.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/white"
-    >
+                tools:context=".IndexActivity">
 
     <FrameLayout
         android:id="@+id/frame"
@@ -22,10 +23,10 @@
             />
 
         <ImageView
+            android:layout_gravity="center"
             android:id="@+id/favicon"
-            android:scaleType="center"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             />
 
         <TextView
