--- a/chrome-extension/assets/popup.css
+++ b/chrome-extension/assets/popup.css
@@ -1,11 +1,11 @@
 body {
-    background: #eeeeee;
-    padding: 5px;
+    margin: 0;
+    padding: 0;
 }
 
 #main {
     background: #fff;
-    padding: 5px 10px;
+    padding: 10px 15px;
 
     width: 400px;
     min-width: 400px;
@@ -16,11 +16,19 @@ body {
     overflow: scroll;
 }
 
-#status {
-    text-align: center;
-    font-weight: 800;
-    font-size: 24pt;
+#url {
+    font-size: 14pt;
     color: #333;
+    width: 350px;
+    margin: 0;
+    padding: 0;
+    height: 30px;
+    vertical-align: middle;
+    outline: none;
+}
+
+#status {
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -28,7 +36,7 @@ body {
     min-height: 300px;
     max-height: 300px;
     height: 300px;
-    overflow:scroll;
+    overflow: scroll;
 }
 
 #about {
@@ -74,5 +82,15 @@ body {
 .add {
     cursor: pointer;
     color: #000099;
+    font-weight: 800;
+    margin: 0;
+    padding: 0;
+    width: 42px;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;
+    font-size: 10pt;
+    height: 30px;
 }
 
