--- a/app/src/main/res/layout/archived_page_row.xml
+++ b/app/src/main/res/layout/archived_page_row.xml
@@ -40,6 +40,12 @@
             android:gravity="center"
             />
 
+        <ImageView
+            android:id="@+id/status"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="bottom|right"
+            />
 
     </FrameLayout>
 
