--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -12,7 +12,7 @@
             android:summary="not set"
         />
 
-        <Preference
+        <CheckBoxPreference
             android:key="wifi-only"
             android:title="@string/pref_wifi_only"
             />
