--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -6,17 +6,17 @@
               android:layout_height="match_parent"
               android:paddingRight="5dp"
               android:paddingLeft="5dp"
-              android:background="#ccc"
     >
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@android:id/list"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"/>
+            />
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
