--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -16,46 +16,13 @@
         android:gravity="center" />
 
     <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/progress"
-        android:indeterminate="true"
-        android:layout_gravity="center"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
-
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        fab:fab_addButtonColorNormal="@color/white"
-        fab:fab_addButtonColorPressed="@color/white_pressed"
-        fab:fab_addButtonPlusIconColor="@color/half_black"
-        fab:fab_addButtonStrokeVisible="true"
-        fab:fab_expandDirection="up"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="48dp">
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/white_pressed"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/white_pressed"
-            fab:fab_size="mini"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/white_pressed"
-            fab:fab_size="mini"/>
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+        android:layout_gravity="center_horizontal|top"
+        android:progress="0"
+        android:max="100"
+        android:indeterminate="false"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
 </FrameLayout>
