--- a/app/src/main/res/layout/archived_page_row.xml
+++ b/app/src/main/res/layout/archived_page_row.xml
@@ -1,109 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="5dp">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/white"
-                tools:context=".IndexActivity">
-
-    <FrameLayout
-        android:id="@+id/frame"
+    <TextView
+        android:id="@+id/read"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:padding="5dp"
+        android:layout_gravity="top|left"
+        android:background="@drawable/unread"
+        android:elevation="10dp"
+        android:textColor="#ffffff"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        />
+
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@android:color/white"
+        android:paddingTop="5dp"
         >
-        <ImageView
-            android:id="@+id/screenshot"
-            android:scaleType="centerInside"
-            android:layout_width="64dp"
-            android:layout_height="96dp"
-            android:adjustViewBounds="true"
+
+
+        <FrameLayout
+            android:id="@+id/frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            >
+
+            <ImageView
+                android:id="@+id/screenshot"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                />
+
+            <ImageView
+                android:id="@+id/favicon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                />
+
+            <ImageView
+                android:id="@+id/status"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="bottom|center_horizontal"
+                />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/frame"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:padding="5dp"
+            android:textSize="13sp"
+            android:textStyle="bold"
             />
 
+
         <ImageView
-            android:layout_gravity="center"
-            android:id="@+id/favicon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:id="@+id/more"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/title"
+            android:padding="10dp"
+            android:src="@drawable/ic_action_more"
             />
 
         <TextView
-            android:id="@+id/read"
-            android:background="@drawable/unread"
+            android:id="@+id/created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/title"
+            android:layout_toLeftOf="@id/more"
+            android:gravity="center_vertical|left"
+            android:padding="3dp"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:gravity="center"
             />
-
-        <ImageView
-            android:id="@+id/status"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="bottom|right"
-            />
-
-    </FrameLayout>
-
-    <ImageView
-        android:id="@+id/more"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_action_more"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:padding="10dp"
-        />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/frame"
-        android:layout_alignParentTop="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#dd000000"
-        android:textStyle="bold"
-        android:maxLines="2"
-        android:paddingTop="5dp"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        />
-
-    <TextView
-        android:id="@+id/url"
-        android:layout_toRightOf="@id/frame"
-        android:layout_toLeftOf="@id/more"
-        android:layout_below="@id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingRight="5dp"
-        android:textSize="14sp"
-        android:textColor="#88000000"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        />
-
-
-    <TextView
-        android:id="@+id/created"
-        android:layout_below="@id/url"
-        android:layout_toRightOf="@id/frame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#88000000"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
 
 
 
-</RelativeLayout>
