--- a/android/app/src/main/res/layout/activity_viewer.xml
+++ b/android/app/src/main/res/layout/activity_viewer.xml
@@ -6,7 +6,8 @@
     android:background="#000000"
     tools:context="org.quuux.knapsack.ViewerActivity">
 
-    <org.quuux.knapsack.ObservableWebView android:id="@+id/fullscreen_content"
+    <org.quuux.knapsack.ObservableWebview
+        android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:keepScreenOn="true"
