--- a/android/app/src/main/res/menu/main.xml
+++ b/android/app/src/main/res/menu/main.xml
@@ -3,7 +3,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/setup_sync"
           android:title="@string/setup_sync"
-          app:showAsAction="never"/>
+          android:icon="@drawable/ic_cloud"
+          app:showAsAction="always"/>
     <item android:id="@+id/settings"
           android:title="@string/prefs"
           app:showAsAction="never"/>
