--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,6 +5,10 @@
            parent="@style/Theme.AppCompat">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionBarOverlay">true</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="android:fitsSystemWindows">true</item>
+
     </style>
 
 </resources>
