--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,13 +2,7 @@
 <resources>
 
     <style name="ViewerTheme"
-           parent="@style/Theme.AppCompat">
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="windowActionBarOverlay">true</item>
-
-        <item name="windowActionBar">false</item>
-        <item name="android:fitsSystemWindows">true</item>
-
+           parent="@style/Theme.AppCompat.NoActionBar">
     </style>
 
 </resources>
