--- a/android/app/src/main/res/layout/activity_viewer.xml
+++ b/android/app/src/main/res/layout/activity_viewer.xml
@@ -14,7 +14,7 @@
         android:textColor="#33b5e5"
         android:textStyle="bold"
         android:textSize="50sp"
-        android:gravity="center"
+        android:gravity="bottom"
         android:scrollbarSize="5dp"
         android:scrollbarThumbVertical="@drawable/scrollbar_thumb"/>
 
