--- a/KnapsackApp/app/src/main/res/layout/activity_viewer.xml
+++ b/KnapsackApp/app/src/main/res/layout/activity_viewer.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <org.quuux.knapsack.ObservableWebview
+        <org.quuux.knapsack.view.ObservableWebview
             android:id="@+id/fullscreen_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
