--- a/KnapsackApp/app/src/main/res/menu/viewer_menu.xml
+++ b/KnapsackApp/app/src/main/res/menu/viewer_menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:id="@+id/open_source"
+          android:title="@string/open_source" />
+
     <item android:id="@+id/resave_page"
           android:title="@string/resave_page" />
 
